# parallel_2f_gripper

./: CMakeLists.txt  README.md  package.xml
config/: control.yaml  gripper_param.yaml  gripper_param_test.yaml  model_param.yaml  pybullet_param.yaml
launch/: config.rviz  display.launch  gazebo_standalone.launch  load_config.launch  load_gripper_config.launch  pybullet.launch  roscontrol_standalone.launch  simulation.launch  test_rviz.launch  upload.launch  upload_standalone.launch
scripts/: gripper_server.py
urdf/: box.xacro  coke_can.urdf  finger.xacro  gripper.xacro  gripper_pybullet.urdf  gripper_pybullet.xacro  gripper_rviz.xacro  gripper_standalone.xacro  gripper_standalone_not_fixed.xacro  roscontrol.gazebo  test-urdf  transmission.xacro
worlds/: robot.world
